--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<div class="thumbnails">
 		</div>
 		<div class="display">
+			<img class="big-cat" src="" alt="cat-picture">
+			<h2 class="cat-name"></h2>
+			<h3 class="counter"></h3>
 		</div>
 	</div>
 	<script src="js/app.js"></script>
