Attempt to fix clicks bug

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="display">
 			<img class="big-cat" src="" alt="cat-picture">
 			<h2 class="cat-name"></h2>
-			<h3 class="counter"></h3>
+			<div class="counter"></div>
 		</div>
 	</div>
 	<script src="js/app.js"></script>
