--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 			<h2 class="cat-name"></h2>
 			<div class="counter"></div>
 		</div>
+		<div class="popup">
+			<form class="form">
+				Name: <br>
+				<input type="text" id="name" value=""><br>
+				URL: <br>
+				<input type="text" id="url" value=""><br>
+				Clicks: <br>
+				<input type="number" id="clicks" value="">
+			</form>
+			<button class="cancel">Cancel</button>
+			<button class="save">Save</button>
+		</div>
+		<button class="admin-bttn">Admin</button>
 	</div>
 	<script src="js/app.js"></script>
 </body>
